# Parts-Packing-Generator

./: .gitignore  CHANGELOG.md  DEV.md  PartsPack.py  PartsPack.spec  README.md  pyproject.toml  requirements-build-linux.txt  requirements-build-macos.txt  requirements-build-windows.txt  requirements-windowsbundle.txt
.github/workflows/: build.yml
packaging/: build.py  build_windows.bat  com.inpointautomation.PartsPack.metainfo.xml  make_appimage.py  make_build_venv.py  make_version_info.py  make_windows_bundle.sh
partspack/: __init__.py  __main__.py  cli.py  config.py  params.py  project.py  serial.py
partspack/core/: __init__.py  array.py  base.py  bedsplit.py  drawer.py  heightcapture.py  io.py  label.py  mate.py  meshbool.py  orient.py  pipeline.py  profiling.py  relief.py
partspack/gui/: __init__.py  actions_mixin.py  app.py  bridge.py  build_mixin.py  camera_mixin.py  clip_mixin.py  dialogs.py  gizmo_common_mixin.py  icons.py  main_window.py  mesh.py  mw_common.py  param_panel_mixin.py  part_view_mixin.py  project_mixin.py  ribbon_mixin.py  ring_gizmo_mixin.py  scene_mixin.py  slide_mixin.py  spin_gizmo_mixin.py  theme.py  tilt_gizmo_mixin.py  tilt_mixin.py  toast_mixin.py  translate_gizmo_mixin.py  viewer.py  viewer_common.py  widgets.py
